# snorkel-jax

./: README.md  setup.cfg
snorkel_jax/algos/: hungarian.py
snorkel_jax/analysis/: metrics.py  scorer.py
snorkel_jax/labeling/: __init__.py  analysis.py  graph_utils.py  label_model.py  loss_functions.py
snorkel_jax/labeling/apply/: core.py  pandas.py
snorkel_jax/labeling/lf/: __init__.py  core.py
snorkel_jax/labeling/model/: base_labeler.py  label_model.py  logger.py  loss_functions.py
snorkel_jax/map/: __init__.py  core.py
snorkel_jax/preprocess/: __init__.py  core.py
snorkel_jax/types/: __init__.py  classifier.py  data.py
snorkel_jax/utils/: config.py  core.py  data_operators.py  lr_schedulers.py  optimizers.py
