[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = snorkel-jax
url = https://github.com/4d4stra/snorkel-jax
project_urls =
    GitHub: issues = https://github.com/4d4stra/snorkel-jax/issues
    GitHub: repo = https://github.com/4d4stra/snorkel-jax
description = Snorkel - Updated and Implemented in JAX
long_description = file: README.md
long_description_content_type = text/markdown
author = Shawn R. Roberts
author_email = shawn@akaritechnologies.com
zip_safe = False

[options]
use_scm_version = True
python_requires = >=3.8
packages = find:
include_package_data = True
setup_requires =
    pytest_runner
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
install_requires =
    tqdm>=4.62.3
    jax>=0.2.25
    optax>=0.1.0
    networkx>=2.6.3
    pandas>=1.3.5